# salary_exploration

./: .gitignore  README.md  TODO.md  configuration.py  dash_salary_exploration.py  extract_data.py  pyproject.toml  requirements.txt  salary_exploration.py  transform_data.py
data/: country_code_countries.pk
data/20220529T102956Z/: country_job_salary_transformed.csv
data/20220529T121639Z/: country_job_salary.csv  country_job_salary_normalized.csv
data/20220530T103056Z/: countries.csv
data/20220530T173445Z/: country_job_salary.csv  country_job_salary_transformed.csv  jobs.csv
data/20220530T195841Z/: countries.csv  country_job_salary.csv  country_job_salary_transformed.csv  jobs.csv
search/: countries.csv
