[project]
name = "salary-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "dash-bootstrap-components>=2.0.2",
    "dash>=3.0.4",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pandas>=2.2.3",
    "selenium>=4.32.0",
    "numpy>=2.2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
